--- a/tigamap/templates/tigamap/validated_report_map_filterable.html
+++ b/tigamap/templates/tigamap/validated_report_map_filterable.html
@@ -109,8 +109,8 @@
 
 <script>
 
-    var selected_year =  parseInt("{{ year }}");
-    if(selected_year == null || isNaN(selected_year) || !isFinite(selected_year)){
+    var selected_year = parseInt("{{ year }}");
+    if (selected_year == null || isNaN(selected_year) || !isFinite(selected_year)) {
         selected_year = 2015;
     }
     var selected_month = 0;
@@ -936,19 +936,17 @@ function map_init_basic(map, options) {
 
             // override zoom based on url parameter if present
             var par_zoom = parseInt("{{ zoom }}");
-            if(par_zoom != null && !isNaN(par_zoom) && isFinite(par_zoom)){
+            if (par_zoom != null && !isNaN(par_zoom) && isFinite(par_zoom)) {
                 initialZoom = par_zoom;
             }
             var par_center_lon = parseInt("{{ center_lon }}");
-            if(par_center_lon != null && !isNaN(par_center_lon) && isFinite(par_center_lon)){
+            if (par_center_lon != null && !isNaN(par_center_lon) && isFinite(par_center_lon)) {
                 centerLng = par_center_lon;
             }
             var par_center_lat = parseInt("{{ center_lat }}");
-            if(par_center_lat != null && !isNaN(par_center_lat) && isFinite(par_center_lat)){
+            if (par_center_lat != null && !isNaN(par_center_lat) && isFinite(par_center_lat)) {
                 centerLat = par_center_lat;
             }
-
-            var scroll_wheel_zoom = "{{ scroll_zoom }}" == 'on';
 
             {% block map_options %}
                 var djoptions = {"layers": [
@@ -956,7 +954,7 @@ function map_init_basic(map, options) {
                                 "\u00a9 <a href=\"http://www.openstreetmap.org/copyright\">OpenStreetMap</a> contributors"]
                         ],
                             "minimap": false, "scale": "metric", "center": [centerLat, centerLng], "tilesextent": [],
-                            "attributionprefix": null, "scrollWheelZoom": scroll_wheel_zoom, "zoom": initialZoom, "maxzoom": 18, "minzoom": 0, "extent": [
+                            "attributionprefix": null, "scrollWheelZoom": "{{ scroll_zoom }}" == 'on', "zoom": initialZoom, "maxzoom": 18, "minzoom": 0, "extent": [
                                 [-90,
                                     -180],
                                 [90,
