--- a/tigamap/templates/tigamap/validated_report_map_filterable.html
+++ b/tigamap/templates/tigamap/validated_report_map_filterable.html
@@ -958,7 +958,7 @@ function map_init_basic(map, options) {
                                 "\u00a9 <a href=\"http://www.openstreetmap.org/copyright\">OpenStreetMap</a> contributors"]
                         ],
                             "minimap": false, "scale": "metric", "center": [centerLat, centerLng], "tilesextent": [],
-                            "attributionprefix": null, "scrollWheelZoom": scroll_wheel_zoom, "zoom": initialZoom, "maxzoom": 18, "minzoom": 0, "extent": [
+                            "attributionprefix": null, "scrollWheelZoom": false, "zoom": initialZoom, "maxzoom": 18, "minzoom": 0, "extent": [
                                 [-90,
                                     -180],
                                 [90,
