--- a/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
@@ -11,14 +11,14 @@
         <div class="btn-group" id="type_grp" data-toggle="buttons" style="margin-right:5px;">
             <label class="btn btn-primary btn-sm navbar-btn" id="public_btn">
                 <input type="radio" name="options" autocomplete="off"> Public <span
-                    class="badge">{{ n_public_pending }}</span></label>
+                    class="badge">{{ n_public }}</span></label>
             <label class="btn btn-primary btn-sm navbar-btn" id="flagged_btn">
                 <input type="radio" name="options" autocomplete="off"> Flagged <span
-                    class="badge">{{ n_flagged_pending }}</span>
+                    class="badge">{{ n_flagged }}</span>
             </label>
             <label class="btn btn-primary btn-sm navbar-btn" id="hidden_btn">
                 <input type="radio" name="options" autocomplete="off"> Hidden <span
-                    class="badge">{{ n_hidden_pending }}</span>
+                    class="badge">{{ n_hidden }}</span>
             </label>
         </div>
     </li>
