--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -104,6 +104,12 @@
 
                         <ul class="nav navbar-nav navbar-left">
                             {% block navbar_left_items %}
+                                    <li>
+                                    <button id="grab_reports_button" role="button"
+                                            class="btn btn-primary btn-sm navbar-btn"><span
+                                            class="glyphicon glyphicon-download"></span> Get More Reports
+                                    </button>
+                                </li>
                             {% endblock %}
                             <li>
 
