--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -106,8 +106,8 @@
                             {% block navbar_left_items %}
                                     <li>
                                     <button id="grab_reports_button" role="button"
-                                            class="btn btn-primary btn-sm navbar-btn"><span
-                                            class="glyphicon glyphicon-download"></span> Get More Reports
+                                            class="btn btn-danger btn-sm navbar-btn"><span
+                                            class="glyphicon glyphicon-download"></span>
                                     </button>
                                 </li>
                             {% endblock %}
