--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -105,7 +105,7 @@
                         <ul class="nav navbar-nav navbar-left">
                             {% block navbar_left_items %}
                                     <li>
-                                    <button id="grab_reports_button" role="button"
+                                    <button style="margin-right: 5px;" id="grab_reports_button" role="button"
                                             class="btn btn-danger btn-sm navbar-btn"><span
                                             class="glyphicon glyphicon-download"></span>
                                     </button>
