--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -132,7 +132,7 @@
                             <li>
                                 <button type="button" class="btn btn-warning btn-sm navbar-btn" data-toggle="modal"
                                         data-target="#myModal" style="margin-left:5px"><span
-                                        class="glyphicon glyphicon-filter"></span> Filter
+                                        class="glyphicon glyphicon-filter"></span>
                                 </button>
                             </li>
 
@@ -140,7 +140,7 @@
                             <li>
                                 <button id="save_button" type="submit" class="btn btn-success btn-sm navbar-btn"
                                         style="margin-left:5px"><span
-                                        class="glyphicon glyphicon-floppy-disk"></span> {% trans "Save" %}
+                                        class="glyphicon glyphicon-floppy-disk"></span>
                                 </button>
                             </li>
                         </ul>
