--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -132,7 +132,7 @@
                             </li>
                             {% block grab_reports_button %}
                                 <li>
-                                    <button style="margin-right: 5px;" id="grab_reports_button" role="button"
+                                    <button style="margin-left: 5px;" id="grab_reports_button" role="button"
                                             class="btn btn-danger btn-sm navbar-btn"><span
                                             class="glyphicon glyphicon-download"></span>
                                     </button>
