better saving crafting filters

--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -304,6 +304,9 @@
                 {% endfor %}
 
                 <input id="scroll_position" type="text" name="scroll_position" style="display: none;" value="0">
+                <input id="pending_hidden_btn" type="text" name="pending" style="display: none;" value="{{ pending }}">
+                <input id="flagged_others_hidden_btn" type="text" name="flagged_others" style="display: none;" value="{{ flagged_others }}">
+                <input id="hidden_others_hidden_btn" type="text" name="hidden_others" style="display: none;" value="{{ hidden_others }}">
 
             </form>
 
