better saving crafting filters - all done

--- a/tigacrafting/templates/tigacrafting/expert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/expert_report_annotation.html
@@ -307,6 +307,14 @@
                 <input id="pending_hidden_btn" type="text" name="pending" style="display: none;" value="{{ pending }}">
                 <input id="flagged_others_hidden_btn" type="text" name="flagged_others" style="display: none;" value="{{ flagged_others }}">
                 <input id="hidden_others_hidden_btn" type="text" name="hidden_others" style="display: none;" value="{{ hidden_others }}">
+                <input type="text" name="orderby" style="display: none;" value="{{ orderby }}">
+                <input type="text" name="tiger_certainty" style="display: none;" value="{{ tiger_certainty }}">
+                <input type="text" name="site_certainty" style="display: none;" value="{{ site_certainty }}">
+                <input type="text" name="hidden" style="display: none;" value="{{ hidden }}">
+                <input type="text" name="flagged" style="display: none;" value="{{ flagged }}">
+                <input type="text" name="public" style="display: none;" value="{{ public }}">
+
+
 
             </form>
 
