coverage area month should now be working but memory issues on laptop

--- a/tigamap/templates/tigamap/validated_report_map_filterable.html
+++ b/tigamap/templates/tigamap/validated_report_map_filterable.html
@@ -549,7 +549,7 @@ function get_coverage_data(id_start, id_stop, map) {
 function update_coverage_data() {
     var csrftoken = $.cookie('csrftoken');
     $.ajax({
-        url: 'http://{{ domain }}/api/update_coverage/',
+        url: 'http://{{ domain }}/api/update_coverage_month/',
         contentType: 'application/json',
         dataType: 'json',
         headers: {
