--- a/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
+++ b/tigacrafting/templates/tigacrafting/superexpert_report_annotation.html
@@ -29,6 +29,20 @@
 {% block grab_reports_button %}
 {% endblock %}
 
+{% block view_others_annotations %}
+    {% if form.instance.report.expert_report_annotations.count > 1 %}
+        <div style="display:none;" id='other_annotations_alert{{ form.instance.id }}'
+             class='alert alert-info' role='alert'>
+            <a class="close" onclick="$('.alert').hide()">×</a>
+            {{ form.instance.get_others_annotation_html | safe }}
+        </div>
+
+        <button type="button"
+                onclick="$('#other_annotations_alert{{ form.instance.id }}').show();"
+                class="btn btn-default btn-sm">Show Others' Annotations
+        </button>
+    {% endif %}
+{% endblock %}
 
 
 {% block filter_modal %}
